[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI-Godot/HUD.gd" type="Script" id=1]
[ext_resource path="res://UI-Godot/buttonLeft.tres" type="DynamicFont" id=2]
[ext_resource path="res://Art/Fonts/NotoEmoji-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI-Godot/Save.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/Fonts/font.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="Theme" id=8]
/styles/color = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )
Button/colors/font_color = Color( 1, 1, 1, 1 )
Button/colors/font_color_disabled = Color( 1, 1, 1, 1 )
Button/colors/font_color_focus = Color( 1, 1, 1, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 0
Button/fonts/font = SubResource( 4 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=14]
size = 35
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 49
outline_color = Color( 0.278431, 0.278431, 0.278431, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.138062, 0.304688, 0.189331, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.27451, 0.631373, 0.384314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.164706, 0.317647, 0.0156863, 1 )
border_blend = true

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 271.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.029
anchor_top = -0.194
anchor_right = 0.029
anchor_bottom = -0.194
margin_left = -30.696
margin_top = 116.4
margin_right = 994.304
margin_bottom = 717.4
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -369.5
margin_top = -188.0
margin_right = 369.5
margin_bottom = 188.0
theme = SubResource( 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 732.0
margin_bottom = 369.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 362.0
rect_min_size = Vector2( 120, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2"]
margin_right = 120.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer2/ScrollContainer"]
margin_right = 120.0
margin_bottom = 50.0
rect_min_size = Vector2( 120, 50 )

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 128.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( -794, -30 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 725.0
margin_bottom = 362.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 593.0
margin_bottom = 76.0

[node name="Button" type="CheckBox" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 91.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 9 )
text = "üîÅ"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 95.0
margin_right = 99.0
margin_bottom = 76.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 229.0
margin_bottom = 76.0

[node name="CheckBox" type="CheckBox" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 126.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "Speed Series"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 126.0
margin_bottom = 40.0

[node name="CheckBox2" type="CheckBox" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 126.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )
text = "Size Series"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 233.0
margin_right = 237.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( -794, -30 )

[node name="DirectionOptionButton" type="OptionButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 241.0
margin_right = 331.0
margin_bottom = 76.0
rect_min_size = Vector2( 50, 0 )
theme = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "‚û°Ô∏è"
items = [ "‚û°Ô∏è", null, false, 0, null, "‚ÜòÔ∏è", null, false, 1, null, "‚¨áÔ∏è", null, false, 2, null, "‚ÜôÔ∏è", null, false, 3, null, "‚¨ÖÔ∏è", null, false, 4, null, "‚ÜñÔ∏è", null, false, 5, null, "‚¨ÜÔ∏è", null, false, 6, null, "‚ÜóÔ∏è", null, false, 7, null ]
selected = 0

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 335.0
margin_right = 339.0
margin_bottom = 76.0

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 343.0
margin_right = 506.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 163.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 10 )
text = "Background Color"

[node name="ColorBackgroundButton" type="ColorPickerButton" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 33.0
margin_right = 163.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 14 )
text = "Background color"
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="VSeparator4" type="VSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 510.0
margin_right = 514.0
margin_bottom = 76.0

[node name="Start" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 518.0
margin_right = 593.0
margin_bottom = 76.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
text = "Start"
icon_align = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 593.0
margin_bottom = 84.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 593.0
margin_bottom = 201.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 515.0
margin_bottom = 113.0
size_flags_horizontal = 3
follow_focus = true
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ScrollContainer"]
margin_right = 515.0
margin_bottom = 113.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 519.0
margin_right = 593.0
margin_bottom = 113.0

[node name="Button2" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 74.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 10 )
text = "New"

[node name="Button5" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 39.0
margin_right = 74.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 10 )
text = "Save"

[node name="Button4" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 78.0
margin_right = 74.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 10 )
text = "Delete"

[node name="CheckBox" type="CheckBox" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -34.5
margin_top = -24.0
margin_right = 34.5
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Debug"

[node name="Button" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -35.0
margin_bottom = 20.0
text = "Exit"

[node name="Save" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="show_override" from="." to="Save" method="_on_HUD_show_override"]
[connection signal="toggled" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="item_selected" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/DirectionOptionButton" to="." method="_on_DirectionOptionButton_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Button5" to="." method="_save_test_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="override" from="Save" to="." method="_on_Save_override"]
[connection signal="save_is_done" from="Save" to="." method="_on_Control_save_is_done"]
